# ship-shape

./: .agentready-config.example.yaml  .coderabbit.yaml  .gitignore  API_DOCUMENTATION_ASSESSOR_TEST.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  GITHUB_ISSUES.md  PHASE3_TESTING_RESULTS.md  PHASE4_RESULTS.md  README.md  TESTING_GUIDE.md  UNIT_TEST_NAMING_ASSESSOR_TEST.md  demo_quality_assessors.py  pyproject.toml  repos-for-benchmark.txt  test_benchmarking.py  test_model_registry.py  test_quality_assessment.py
.github/: agentready-acl.yml
.github/workflows/: agentready-assessment.yml  agentready-dev-issue-pr.yml  agentready-dev.yml  continuous-learning.yml  dependabot-auto-merge.yml  leaderboard.yml  tests.yml  tests_simplified.yml  update-docs.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: attributes.md  index.md  simplification-analysis.md
docs/_site/: PREVIEW.html  PREVIEW.md  implementation-status.html  tbench.html
docs/_site/demos/: index.html  slides.html  terminal-demo.html  walkthrough.html
docs/assets/css/: style.css
frontend/: .eslintrc.json  .gitignore  .prettierignore  README.md  index.html  openapitools.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DrillDownView.tsx  EmptyState.tsx  RadarChart.tsx  RecommendationsList.tsx  RepositoryInput.tsx  RepositoryTable.tsx  ScoreCard.tsx  StellarChart.tsx  TrendIcon.tsx  TrendModal.tsx
frontend/src/hooks/: usePollRepositories.ts
frontend/src/pages/: Dashboard.tsx  RepositoryDetail.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/tests/: setup.ts
plans/: blocking-test-followups.md  blocking-tests-strategy.md  eval-harness-phase2-plan.md
specs/: llm-pattern-extraction.md
specs/002-harbor-real-integration/: DOUBLEAGENT_IMPACT.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-harbor-real-integration/checklists/: requirements.md
specs/002-harbor-real-integration/contracts/: aggregation-output-schema.json  harbor-results-schema.json
specs/003-quality-profiling-ui/: IMPLEMENTATION_LOG.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-quality-profiling-ui/checklists/: requirements.md
specs/003-quality-profiling-ui/contracts/: README.md  openapi.yaml  types.ts
src/agentready/api/: __init__.py  app.py
src/agentready/api/middleware/: errors.py
src/agentready/api/routes/: assessments.py  benchmarks.py  export.py  health.py  repositories.py
src/agentready/assessors/: code_quality.py  documentation.py  stub_assessors.py
src/agentready/assessors/quality/: __init__.py  api_documentation.py  contract_testing.py  documentation.py  ecosystem_tools.py  integration_db_setup.py  integration_test_structure.py  integration_tests.py  mutation_testing.py  test_coverage.py  test_fixtures.py  test_performance_benchmarks.py  unit_test_naming.py
src/agentready/cli/: align.py  assess_batch.py  assess_batch_quality.py  assess_quality.py  benchmark.py  benchmark_quality.py  extract_skills.py  learn.py  main.py  main_simplified.py
src/agentready/learners/: code_sampler.py
src/agentready/models/: __init__.py  assessment.py  assessor_result.py  benchmark.py  config.py  fix.py  quality_profile.py  recommendation.py  repository.py  repository_record.py  theme.py
src/agentready/reporters/: html.py  markdown.py  multi_html.py
src/agentready/services/: __init__.py  assessment_runner.py  benchmarking.py  llm_cache.py  quality_scorer.py  recommendation_engine.py  repository_service.py  research_formatter.py  scanner.py  statistics.py  trend_analyzer.py
src/agentready/services/eval_harness/: __init__.py  aggregator.py  batch_runner.py  harbor_config.py  tbench_runner.py
src/agentready/storage/: __init__.py  assessment_store.py  base.py  connection.py  schema.sql
src/agentready/templates/: report.html.j2
src/agentready/utils/: __init__.py  preflight.py  privacy.py  security.py
submissions/jeremyeder/reference/: 2026-01-15T05-05-53-assessment.json
tests/: __init__.py
tests/e2e/: __init__.py  test_critical_paths.py  test_critical_paths_simplified.py
tests/integration/: test_scan_workflow.py
tests/unit/: test_cli_extract_skills.py  test_cli_learn.py  test_csv_reporter.py  test_eval_harness_cli.py  test_eval_harness_services.py  test_fixer_service.py  test_github_scanner.py  test_harbor_config.py  test_learning_service.py  test_models.py  test_theme.py  test_utils_security.py
tests/unit/cli/: test_main.py
tests/unit/learners/: test_llm_enricher.py  test_pattern_extractor.py
tests/unit/utils/: test_preflight.py
